<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto" android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:showIn="@layout/activity_main"
    tools:context=".MainActivity"
    android:orientation="vertical">
<FrameLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
<EditText
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/logTxtClave"
    android:hint="@string/strLogTxtClave"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/logTxtCuenta"
        android:hint="@string/strLogTxtCuenta" />
</FrameLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/logBtnAcceder"
        android:text="@string/strLogBtnAcceder" />
        />
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/logBtnSeguir"
            android:onClick="LogSeguir"
            android:text="@string/strLogBtnSeguir" />

    </FrameLayout>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/logLabCuenta"/>
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
<Button
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/logBtnAnterior"
    android:text="@string/strLogBtnAnterior"
    android:onClick="logAnterior"/>

    </FrameLayout>
</LinearLayout>
